# sultan_cli

./: .gitignore  Cargo.toml  config.json
src/: config.rs  context.rs  main.rs
src/actions/: apk_patch_net_cfg.rs  decompile_apk.rs  deploy_apk.rs  download_apk.rs  download_emulator.rs  download_tools.rs  exit.rs  mod.rs  start_emulator.rs  trace.rs
src/tools/: adb.rs  apk_downloader.rs  apk_signer.rs  apk_tool.rs  corona_archiver.rs  emulator.rs  file_downloader.rs  http_proxy.rs  ip_tools.rs  local_cmdline.rs  mod.rs
