[package]
name = "sultan_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
dialoguer = "0.10.0"
zip = "0.5.13"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
quick-xml = "0.22.0"
reqwest = { version = "0.11.9", features = ["blocking"] }
